@@ -174,5 +174,5 @@ ACE_STATIC_SVC_DEFINE (
     0
   )
 
-ACE_FACTORY_DEFINE (TAO_IFR_Client, TAO_IFR_Client_Adapter_Impl)
+ACE_FACTORY_DEFINE (TAO_IFR_CLIENT, TAO_IFR_Client_Adapter_Impl)
 TAO_END_VERSIONED_NAMESPACE_DECL
